Correctly align md icon in ActionRouter component

--- a/src/assets/action.scss
+++ b/src/assets/action.scss
@@ -88,7 +88,7 @@
 			background-repeat: no-repeat;
 		}
 
-		.material-design-icon {
+		&::v-deep .material-design-icon {
 			width: $clickable-area;
 			height: $clickable-area;
 			opacity: $opacity_full;
